--- a/geo3d-visualizer/index.html
+++ b/geo3d-visualizer/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>geo3d-visualizer</title>
+    <title>3D House - Geo3D Visualizer</title>
   </head>
   <body>
     <div id="root"></div>
